# rules_minio

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MODULE.bazel  README.md  docker-compose.yaml
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: release.yaml  release_prep.sh
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
examples/mc_bin/: BUILD.bazel
examples/mirror/: BUILD.bazel
minio/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
minio/private/: BUILD.bazel  mc_mirror.bzl  mc_mirror.sh.tpl  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
minio/tests/: versions_test.bzl
