bazel_dep(name = "rules_minio", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)

bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_lib", version = "3.0.0")

local_path_override(
    module_name = "rules_minio",
    path = "../..",
)

minio = use_extension("@rules_minio//minio:extensions.bzl", "minio")
minio.toolchain(minio_version = "RELEASE.2025-08-13T08-35-41Z")
use_repo(minio, "minio_toolchains")

register_toolchains("@minio_toolchains//:all")
